--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -4,13 +4,65 @@
   }
   img {
     width: 100%;
+    margin-bottom: 50px;
   }
-
+  line-height: 40px;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
   h1 {
     font-size: 42px;
   }
+  h2 {
+    font-size: 36px;
+  }
+  h3 {
+    font-size: 30px;
+  }
+  h4 {
+    font-size: 26px;
+  }
+  h5 {
+    font-size: 22px;
+  }
+  h6 {
+    font-size: 18px;
+  }
+
   p {
     font-size: 23px;
     font-family: "Baskerville", "Arial";
+    margin-bottom: 20px;
+  }
+
+  ul,
+  ol {
+    margin-left: 20px;
+    font-family: "Baskerville";
+    font-size: 23px;
+  }
+
+  a {
+    color: rgb(96, 96, 255);
+    font-size: 23px;
+    text-decoration: none;
+    font-weight: bolder;
+
+    &:hover {
+      color: rgb(125, 125, 248);
+    }
+  }
+  .image-heading {
+    text-align: center;
+    margin-bottom: 80px;
+    margin-top: -80px;
+    font-family: "Baskerville";
+    font-size: 20px;
   }
 }
