--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -6,6 +6,14 @@
   top: 0px;
   line-height: 100px;
   width: 100%;
+  @media (max-width: $media-md) {
+    height: 50px;
+    line-height: 50px;
+    // top: auto;
+    // bottom: 0px;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(20px);
+  }
 
   &.navbar-scrolled {
     background: rgba(0, 0, 0, 0.2);
@@ -14,6 +22,10 @@
     .navbar-title {
       display: block;
       opacity: 1;
+      @media (max-width: $media-md) {
+        display: none;
+        opacity: 0;
+      }
     }
   }
 
@@ -21,6 +33,9 @@
     display: flex;
     justify-content: space-between;
     align-content: center;
+    @media (max-width: $media-md) {
+      justify-content: center;
+    }
   }
 
   .navbar-title {
@@ -29,6 +44,11 @@
     opacity: 0;
     display: none;
     transition: all 0.2s ease-in-out;
+
+    @media (max-width: $media-md) {
+      font-size: 20px;
+      opacity: 0;
+    }
   }
 
   .navbar-links {
@@ -39,6 +59,13 @@
       font-weight: bold;
       margin-left: 25px;
       margin-right: 25px;
+
+      @media (max-width: $media-md) {
+        font-size: 16px;
+        font-weight: normal;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
 
       &:hover {
         color: rgb(209, 209, 209);
