--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -8,8 +8,23 @@
     position: relative;
     margin-bottom: 25px;
 
-    .project-image {
+    .project-image-wrapper {
       width: 100%;
+      height: 100%;
+      overflow: hidden;
+      .project-image {
+        overflow: hidden;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
+        width: 100%;
+        transition: transform 2s;
+      }
+
+      &:hover {
+        .project-image {
+          transform: scale(1.2);
+        }
+      }
     }
     .project-title {
       position: absolute;
@@ -17,10 +32,12 @@
       left: 30px;
       font-family: "Gilroy";
       font-style: normal;
-      font-weight: 300;
-      font-size: 30px;
+      font-weight: bold;
+      font-size: 25px;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.67);
       &.black {
         color: black;
+        text-shadow: 0px 0px 3px rgba(0, 0, 0, 0);
       }
     }
   }
@@ -33,4 +50,14 @@
 .project-2 {
   max-height: 510px;
   overflow: hidden;
+}
+@media (max-width: $media-md) {
+  .project-3 {
+    height: 310px;
+    overflow: hidden;
+    .project-image {
+      width: auto;
+      height: 100%;
+    }
+  }
 }
