--- a/styles/_review.scss
+++ b/styles/_review.scss
@@ -2,10 +2,18 @@
   display: flex;
   margin-top: -150px;
   align-items: flex-start;
+  @media (max-width: $media-md) {
+    margin-top: 0px;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 
 .review-image-wrapper {
   width: 50%;
+  @media (max-width: $media-md) {
+    width: 70%;
+  }
 }
 
 .review-image {
@@ -18,6 +26,17 @@
   padding-left: 45px;
   margin-top: 200px;
   height: 100%;
+  @media (max-width: $media-md) {
+    margin-top: 50px;
+    padding-left: 0px;
+  }
+
+  @media (max-width: $media-xl) {
+    margin-top: 180px;
+  }
+  @media (max-width: $media-lg) {
+    margin-top: 100px;
+  }
 }
 
 .review-title {
@@ -42,6 +61,16 @@
   font-size: 48px;
   align-items: flex-end;
   margin-top: 150px;
+  @media (max-width: $media-md) {
+    margin-top: 50px;
+  }
+
+  @media (max-width: $media-xl) {
+    margin-top: 50px;
+  }
+  @media (max-width: $media-lg) {
+    margin-top: 30px;
+  }
 }
 
 .review-rating-score {
